--- a/npkpir_23/web/ksiegowa/sub/layoutParametryzowanie/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutParametryzowanie/west.xhtml
@@ -39,7 +39,7 @@
                     <p:menuitem global="false" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  
                     <p:menuitem global="false" value="kontrahenci fakt." outcome="klienci"  icon="ui-icon-circle-arrow-e"/>  
                     <p:menuitem global="false" value="zestaw. sumaryczne"  outcome="zestawienie" icon="ui-icon-circle-arrow-e"/>  
-                </p:menu rendered="#{WpisView.biuroiszef eq true}">
+                </p:menu>
                 <p:menu>
                     <p:menuitem global="false" value="środki trwałe"  outcome="srodki" icon="ui-icon-circle-arrow-e"/>  
                 </p:menu>
