--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -35,7 +35,7 @@
                             <p:submenu label="czas pracy" style="width: 150px">
                                 <p:menuitem icon="pi pi-ellipsis-v" value="nieobecności" style="width: 150px" onclick="PF('dialogpracownikanieobecnosci').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="nieobecności zbiorcze" style="width: 150px" onclick="PF('dialogpracownikanieobecnoscizbiorcze').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="urlop/choroba" style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
+                                <p:menuitem icon="pi pi-ellipsis-v" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
