--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
@@ -61,10 +61,11 @@
                     </f:facet>
                 </p:autoComplete>
                 <p:inputText value="#{dokfkView.ewidencjaVatRK.numerwlasnydokfk}" style="width: 170px;" required="true" requiredMessage="brak nr wlasnego dokumentu" onblur="czypuste(this)">
+                    <p:ajax global="false" event="blur" listener="#{dokfkView.znajdzduplicatdokumentuRK(dokfkView.ewidencjaVatRK)}" update="ewidencjavatRK:opisvat"/>
                 </p:inputText>
                 <p:inputText id="opisvat" value="#{dokfkView.ewidencjaVatRK.opisvat}" style="width: 170px;"/>
             </p:panelGrid>
-            <p:panelGrid id="panelzewidencjavat" columns="8"  styleClass="uipanelGrid0" style="min-width: 470px; margin-top: 2%;">
+            <p:panelGrid id="panelzewidencjavat" columns="#{dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN'?'8':'7'}"  styleClass="uipanelGrid0" style="min-width: 470px; margin-top: 2%;">
                 <h:outputText value="rodzaj ewidencji" style="width: 110px;"/>
                 <h:outputText value="#{mgs.netto} waluta" style="width: 95px;" rendered="#{dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN'}"/>
                 <h:outputText value="#{mgs.netto}" style="width: 95px;"/>
