--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
@@ -194,7 +194,7 @@
                                     <p:column headerText="kod" width="40" sortBy="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.kod}" sortPriority="0" sortOrder="asc">
                                         <h:outputText value="#{itempasekpotr.nieobecnosc.swiadczeniekodzus.kod}"/>
                                     </p:column>
-                                    <p:column headerText="składnik" width="300" >
+                                    <p:column headerText="składnik" width="250" >
                                         <h:outputText value="#{itempasekpotr.nieobecnosc.opisRodzajSwiadczenie}"/>
                                         <h:outputText value="/"/>
                                         <h:outputText value="#{itempasekpotr.skladnikwynagrodzenia.rodzajwynagrodzenia.opisskrocony}"/>
@@ -216,6 +216,9 @@
                                     </p:column>
                                     <p:column headerText="godziny robocze" width="40" style="text-align: center;">
                                         <h:outputText value="#{itempasekpotr.liczbagodzinobowiazku}"/>
+                                    </p:column>
+                                     <p:column headerText="proc." width="30">
+                                         <bcf:outputplprocent value="#{itempasekpotr.procentzazwolnienie}"/>
                                     </p:column>
                                     <p:column headerText="suma kwot do śr." width="50">
                                         <bcf:outputpl value="#{itempasekpotr.sumakwotdosredniej}"/>
