--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -224,7 +224,7 @@
                                 <h:outputText value=""/>
                             </f:facet>
                             <p:commandButton icon="fa fa-thumbs-up" actionListener="#{nieobecnoscView.nanies(itemNieob)}"  update="NieobecnoscListForm:datalist KalendarzmiesiacListForm:datalist KalendarzmiesiacCreateForm KalendarzmiesiacCreateRokForm"
-                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList eq null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
+                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList ne null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
                             </p:commandButton>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
@@ -232,7 +232,7 @@
                                 <h:outputText value=""/>
                             </f:facet>
                             <p:commandButton icon="fa fa-thumbs-down" actionListener="#{nieobecnoscView.zdejmijzkalendarza(itemNieob)}"  update="@parent:@parent KalendarzmiesiacListForm:datalist KalendarzmiesiacCreateForm KalendarzmiesiacCreateRokForm" 
-                                             rendered="#{itemNieob.naniesiona eq true and (itemNieob.naliczenienieobecnoscList eq null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
+                                             rendered="#{itemNieob.naniesiona eq true and (itemNieob.naliczenienieobecnoscList ne null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
                             </p:commandButton>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
@@ -240,7 +240,7 @@
                                 <h:outputText value=""/>
                             </f:facet>
                             <p:commandButton icon="fa fa-edit" actionListener="#{nieobecnoscView.edytuj(itemNieob)}"  update="NieobecnoscCreateForm" 
-                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList eq null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
+                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList ne null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
                             </p:commandButton>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
@@ -248,7 +248,7 @@
                                 <h:outputText value=""/>
                             </f:facet>
                             <p:commandButton icon="fa fa-trash" actionListener="#{nieobecnoscView.usun(itemNieob)}"  update="NieobecnoscListForm:datalist KalendarzmiesiacListForm:datalist KalendarzmiesiacCreateForm KalendarzmiesiacCreateRokForm"
-                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList eq null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
+                                             rendered="#{itemNieob.naniesiona eq false and (itemNieob.naliczenienieobecnoscList ne null or itemNieob.naliczenienieobecnoscList.size() eq 0)}">
                                 <p:confirm type="popup" header="Potwierdzenie" message="Usunąć nieobecność?" icon="pi pi-exclamation-triangle"/>
                             </p:commandButton>
                         </p:column>
