--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
@@ -207,7 +207,7 @@
                                         <bcf:outputpl value="#{itemdra.podatekdochodowy}"/>
                                     </p:column>
 <!--                                     <p:column style="text-align: center;">
-                                        <p:commandButton icon="fa fa-print" actionListener="#{draView.drukuj(itemdra)}" global="false"/>
+                                        <p:commandButton icon="pi pi-print" actionListener="#{draView.drukuj(itemdra)}" global="false"/>
                                     </p:column>-->
                                 </p:row>
                             </p:panelGrid>
