--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -73,7 +73,7 @@
                                 <h:outputText value="&#x2714;"    rendered="#{itemroz.zwolnieniezpracy}"/>
                             </p:column>
                             <p:column style="text-align: center; width: 30px;">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{rozwiazanieumowyView.usun(itemroz)}" update="north, @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{rozwiazanieumowyView.usun(itemroz)}" update="north, @(form)"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
