--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
@@ -89,7 +89,7 @@
                                 <p:selectBooleanCheckbox value="#{itemzmiennapotr.maxustawowy}"/>
                             </p:column>
                             <p:column style="text-align: center;">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{zmiennaPotraceniaView.usunZmiennaPotr(itemzmiennapotr)}" update="north @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{zmiennaPotraceniaView.usunZmiennaPotr(itemzmiennapotr)}" update="north @(form)"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
