--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
@@ -99,6 +99,8 @@
                             </p:inputText>
                             <h:outputText value="współczynnik dla ekwawalentu "/>
                             <bcf:outputpl value="#{pracownikNieobecnoscView.wspolczynnikEkwiwalent.kwota}"/>
+                            <p:outputLabel value="wymiar rok bieżący" for="urloplp1e" />
+                            <h:outputText id="urloplp1e" value="#{pracownikNieobecnoscView.urlopprezentacja.wymiarokresbiezacy}" />
                             <h:outputText value="etat "/>
                             <h:outputText value="#{pracownikNieobecnoscView.wybranyetat.getEtat()}"/>
                             <h:outputText value="ekwiwalent składniki stałe "/>
