--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_definicja.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_definicja.xhtml
@@ -138,7 +138,7 @@
                             <h:outputText value="&#x2714;" rendered="#{itemdeflisty.pasekwynagrodzenList ne null and itemdeflisty.pasekwynagrodzenList.size() gt 0}"/>
                         </p:column>
                         <p:column width="40" style="text-align: center;">
-                            <p:commandButton icon="fa fa-trash" actionListener="#{definicjalistaplacView.usun(itemdeflisty)}" update="north, @(form)"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{definicjalistaplacView.usun(itemdeflisty)}" update="north, @(form)"/>
                         </p:column><!-- comment -->
                     </p:dataTable>
                 </p:panel>
