--- a/kadry/src/main/webapp/template.xhtml
+++ b/kadry/src/main/webapp/template.xhtml
@@ -38,7 +38,7 @@
                     <ui:insert name="top">Top</ui:insert>
                 </p:outputPanel>
             </div>
-            <div class="col-12 flex" style="margin-top: -10px;top:90px;position: absolute;height: 88%;overflow-y: hidden;">
+            <div class="col-12 flex" style="margin-top: -10px;top:90px;position: fixed;height: 88%;">
                 <p:outputPanel class="col-1 block bg-white font-bold p-0 border-round mb-3" style="box-shadow: 10px 10px 5px #888;min-width: 180px;">
                     <p:idleMonitor timeout="2400000">  
                         <p:ajax event="idle" listener="#{loging.logout()}"/>  
