--- a/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
@@ -62,7 +62,7 @@
                                 <h:outputText value="#{itemetat.etat2}"/>
                             </p:column>
                             <p:column style="text-align: center;">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{etatView.usunEtat(itemetat)}" update="north @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{etatView.usunEtat(itemetat)}" update="north @(form)"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
