--- a/kadry/src/main/webapp/umowa/sub/dane_potracenia.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_potracenia.xhtml
@@ -76,7 +76,7 @@
                             </p:column>
                             
                             <p:column style="text-align: center; width: 30px;">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{skladnikPotraceniaView.usunSkladnikPotr(itemskladnikpotracenia)}" update="north, @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{skladnikPotraceniaView.usunSkladnikPotr(itemskladnikpotracenia)}" update="north, @(form)"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
