--- a/kadry/src/main/webapp/umowa/sub/dane_skladnikwynagrodzenia.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_skladnikwynagrodzenia.xhtml
@@ -101,10 +101,10 @@
                                  <h:outputText value="&#x2714;" rendered="#{itemskladnikwyn.oddelegowanie eq true}"/>
                             </p:column>
                             <p:column width="30" style="text-align: center;">
-                                <p:commandButton icon="fa fa-edit"  actionListener="#{skladnikWynagrodzeniaView.wybierzdoedycji(itemskladnikwyn)}" update="north, @(form) akordeon:SkladnikwynagrodzeniaCreateForm"/>
+                                <p:commandButton icon="pi pi-edit"  actionListener="#{skladnikWynagrodzeniaView.wybierzdoedycji(itemskladnikwyn)}" update="north, @(form) akordeon:SkladnikwynagrodzeniaCreateForm"/>
                             </p:column>
                             <p:column style="text-align: center;" width="30">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{skladnikWynagrodzeniaView.usunSkladnikWyn(itemskladnikwyn)}" update="north, @(form)">
+                                <p:commandButton icon="pi pi-trash" actionListener="#{skladnikWynagrodzeniaView.usunSkladnikWyn(itemskladnikwyn)}" update="north, @(form)">
                                     <p:confirm type="popup" header="Potwierdzenie" message="Usunąć składnik?" icon="pi pi-exclamation-triangle"/>
                                 </p:commandButton>
                             </p:column>
