--- a/kadry/src/main/webapp/umowa/sub/dane_stanowisko.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_stanowisko.xhtml
@@ -60,7 +60,7 @@
                                 <h:outputText value="#{itemstanow.opis}"/>
                             </p:column>
                             <p:column style="text-align: center;">
-                                <p:commandButton icon="fa fa-trash" actionListener="#{stanowiskoPracView.usun(itemstanow)}" update="north @(form)"/>
+                                <p:commandButton icon="pi pi-trash" actionListener="#{stanowiskoPracView.usun(itemstanow)}" update="north @(form)"/>
                             </p:column>
                         </p:dataTable>
                     </p:panel>
