--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
@@ -139,13 +139,13 @@
                         <h:outputText value="#{itemumowa.nfz}"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
-                        <p:commandButton icon="fa fa-edit" actionListener="#{umowaView.edytuj(itemumowa)}" update="north, @(form)"/>
+                        <p:commandButton icon="pi pi-edit" actionListener="#{umowaView.edytuj(itemumowa)}" update="north, @(form)"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
-                        <p:commandButton icon="fa fa-file-text-o"  actionListener="#{umowaView.edytuj(itemumowa)}" onclick="PF('dialogumowatresc').show();" update="north, @(form)"/>
+                        <p:commandButton icon="pi pi-file-text-o"  actionListener="#{umowaView.edytuj(itemumowa)}" onclick="PF('dialogumowatresc').show();" update="north, @(form)"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
-                        <p:commandButton icon="fa fa-trash" actionListener="#{umowaView.usunfunkcja(itemumowa)}" update="north, @(form)">
+                        <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunfunkcja(itemumowa)}" update="north, @(form)">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
