--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -29,7 +29,7 @@
                                         <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy wykaz" style="width: 150px" action="Pracownikwykaz"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy angaże" style="width: 150px" action="Pracownik"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy dane" style="width: 150px" action="Pracownikdane"/>
-                                         <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy alerty" style="width: 150px" action="Pracownikalerty"/>
+                                          <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy alerty" style="width: 150px" action="Pracownikalerty"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy aneksy" style="width: 150px" action="Pracownikaneksy"/>
                                     </p:submenu>
                              <p:menuitem icon="pi pi-file" value="umowy" style="width: 150px" action="Umowa"/>
                             <p:submenu label="czas pracy" style="width: 150px">
