--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -163,7 +163,7 @@
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
                                     </p:inputText>
                                 </p:column>
-                                <p:column>
+                                <p:column  rendered="#{dokfkView.zapisz0edytuj1 eq false}">
                                     <p:inputText id="data4DialogWpisywanie" value="#{dokfkView.selected.datawplywu}" 
                                                  onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data4DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
                                                  title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
@@ -172,12 +172,22 @@
                                     </p:inputText>
                                 </p:column>
                                 <p:column>
-                                    <p:inputText id="data2DialogWpisywanie" value="#{dokfkView.selected.datadokumentu}" 
-                                                 onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data2DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
+                                    <p:inputText id="data2aDialogWpisywanie" value="#{dokfkView.selected.datadokumentu}" 
+                                                 onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data2aDialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
                                                  title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
                                                  onfocus="zaznaczpoledaty(this)"
                                                  >
                                         <p:ajax global="false" event="blur" partialSubmit="true"/>
+                                    </p:inputText>
+                                </p:column>
+<!--                                umożliwia zmiane kursu waluty podczas edycji zaimportowanego -->
+                                <p:column rendered="#{dokfkView.zapisz0edytuj1 eq true}">
+                                    <p:inputText id="data2DialogWpisywanie" value="#{dokfkView.selected.datadokumentu}" 
+                                                 onblur="ustawDateFK(#{WpisView.rokWpisu}, #{WpisView.miesiacWpisu}, 'data2DialogWpisywanie', #{dokfkView.zapisz0edytuj1});"
+                                                 title="wpisz numer dnia, lub miesiąc i dzień"  styleClass="dataInput"
+                                                 onfocus="zaznaczpoledaty(this)" 
+                                                 >
+                                        <p:ajax global="false" event="blur" partialSubmit="true" listener="#{dokfkView.zmienkursNBP()}" />
                                     </p:inputText>
                                 </p:column>
                                 <p:column>
@@ -391,7 +401,7 @@
                             </p:panelGrid>
                             <p:panelGrid id="panelTabelaNBP" style="min-width: 80%;">
                                 <f:facet name="header">
-                                    <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0 and dokfkView.selected.nieprzeliczaj eq false)}">
+                                    <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0)}">
                                         <p:column>
                                             <h:outputText id="w02" value="#{dokfkView.selected.walutadokumentu eq 'PLN' ? ''  : 'z dnia'}" />
                                         </p:column>
@@ -403,7 +413,7 @@
                                         </p:column>
                                     </p:row>
                                 </f:facet>
-                                <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0 and dokfkView.selected.nieprzeliczaj eq false)}">
+                                <p:row rendered="#{dokfkView.pokazRzadWalutowy || (dokfkView.selected.tabelanbp.waluta.symbolwaluty ne 'PLN' and dokfkView.selected.rodzajedok.kategoriadokumentu != 0)}">
                                     <p:column>
                                         <h:outputText id="w11" value="#{dokfkView.selected.walutadokumentu.symbolwaluty eq 'PLN' ? ''  : dokfkView.selected.tabelanbp.datatabeli}"/>
                                     </p:column>
